@@ -4,4 +4,5 @@
 <h1 class="Ch" id="s1">1 today</h1>
 <p><a href="http://bardinflor.perso.aquilenet.fr/frundis/intro-en">http://bardinflor.perso.aquilenet.fr/frundis/intro-en</a>
 <img src="http://bardinflor.perso.aquilenet.fr/images/frundis-mini.jpg" alt="http://bardinflor.perso.aquilenet.fr/images/frundis-mini.jpg" />
-«\»</p>
+«\»
+Environment:ok</p>
