@@ -9,5 +9,5 @@ today
 
 <http://bardinflor.perso.aquilenet.fr/frundis/intro-en>
 ![http://bardinflor.perso.aquilenet.fr/images/frundis-mini.jpg](http://bardinflor.perso.aquilenet.fr/images/frundis-mini.jpg)
-«\\»
+«\\» Environment:ok
 
