@@ -9,4 +9,5 @@ Some text\&. The date:today
 .HEADING 2 NAMED s:1 "today"
 .PDF_WWW_LINK http://bardinflor\&.perso\&.aquilenet\&.fr/frundis/intro-en SUFFIX ""
 «\e»
+Environment:ok
 .PP
