@@ -9,4 +9,5 @@ Some text. The date:today
 \label{s:1}
 \url{http://bardinflor.perso.aquilenet.fr/frundis/intro-en}
 «\textbackslash{}»
+Environment:ok
 
